<resources>
    <string name="app_name">Recipe Manager</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="Done">Done</string>
    <string name="insert">Insert</string>
    <string name="profile_name">Profile Name</string>
    <string name="fructose_intolerance">Fructose Intolerance</string>
    <string name="caffeine_intolerance">Caffeine intolerance</string>
    <string name="gluten_intolerance">Gluten intolerance</string>
    <string name="lactose_intolerance">Lactose intolerance</string>
    <string name="create">Create</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="gluten_intolerant">Gluten intolerant</string>
    <string name="gluten_tolerant">Gluten tolerant</string>
    <string name="caffeine_tolerant">Caffeine tolerant</string>
    <string name="caffeine_intolerant">Caffeine intolerant</string>
    <string name="fructose_intolerant">Fructose intolerant</string>
    <string name="fructose_tolerant">Fructose tolerant</string>
    <string name="lactose_intolerant">Lactose intolerant</string>
    <string name="lactose_tolerant">Lactose tolerant</string>
    <string name="settings">Settings</string>
    <string name="navigation">Navigation</string>
    <string name="all_recipes">All recipes</string>
    <string name="my_ingredients">Ingredient shopping list</string>
    <string name="recipe_name">Recipe name*</string>
    <string name="type_of_meal">Type of meal</string>
    <string name="time_to_make">Time to make</string>
    <string name="contains">Contains:</string>
    <string name="gluten">Gluten</string>
    <string name="lactose">Lactose</string>
    <string name="caffeine">Caffeine</string>
    <string name="fructose">Fructose</string>
    <string name="ingredient_and_amount">Ingredient and amount</string>
    <string name="description">Description</string>
    <string name="insert_recipe">Insert recipe</string>
    <string name="ingredients">Ingredients:</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photo_url">Photo Url</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="write_your_own_comment">Write your own comment</string>
    <string name="sulfite_intolerance">Sulfite intolerance</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="sulfite_tolerant">Sulfite tolerant</string>
    <string name="sulfite_intolerant">Sulfite intolerant</string>
    <string name="not_vegan">Not vegan</string>
    <string name="not_vegetarian">Not vegetarian</string>
    <string name="sulfite">Sulfite</string>
</resources>
