<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.recipemanager.detailProfile.DetailProfileViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="26sp"
        android:gravity="center"
        android:id="@+id/profile_name_detail"
        />
    <TextView
        android:id="@+id/gluten_intolerance_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_detail"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/gluten_intolerance" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gluten_intolerance_detail"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/caffeine_intolerance"
        android:id="@+id/caffeine_intolerance_detail"/>
    <TextView
        android:id="@+id/fructose_intolerance_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/caffeine_intolerance_detail"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/fructose_intolerance" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fructose_intolerance_detail"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/lactose_intolerance"
        android:id="@+id/lactose_intolerance_detail"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/select_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/delete_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>