<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_this"
        android:textSize="20sp"
        android:id="@+id/delete_text_popup"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintTop_toBottomOf="@id/delete_text_popup"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="70dp"
        android:id="@+id/yes_button"
        android:clickable="true"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintTop_toBottomOf="@id/delete_text_popup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:clickable="true"
        android:id="@+id/no_button"
        android:paddingBottom="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>