<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.recipemanager.profiles.ProfileViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_profile_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:id="@+id/profile_scroll">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/profile_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lactose_intolerance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/lactose_intolerance"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

        <TextView
            android:id="@+id/gluten_intolerance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:text="@string/gluten_intolerance"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lactose_intolerance_text" />

        <TextView
            android:id="@+id/caffeine_intolerance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/caffeine_intolerance"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gluten_intolerance_text" />

        <TextView
            android:id="@+id/fructose_intolerance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/fructose_intolerance"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caffeine_intolerance_text" />

        <TextView
            android:id="@+id/sulfite_intolerance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/sulfite_intolerance"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fructose_intolerance_text" />

        <TextView
            android:id="@+id/vegan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/vegan"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sulfite_intolerance_text" />

        <TextView
            android:id="@+id/vegetarian_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/vegetarian"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegan_text" />

        <CheckBox
            android:id="@+id/lactose_intolerance_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/lactose_intolerance_text"
            app:layout_constraintTop_toBottomOf="@id/profile_name_edit" />

        <CheckBox
            android:id="@+id/gluten_intolerance_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/gluten_intolerance_text"
            app:layout_constraintTop_toBottomOf="@id/lactose_intolerance_check" />

        <CheckBox
            android:id="@+id/caffeine_intolerance_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/caffeine_intolerance_text"
            app:layout_constraintTop_toBottomOf="@id/gluten_intolerance_check" />

        <CheckBox
            android:id="@+id/fructose_intolerance_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fructose_intolerance_text"
            app:layout_constraintTop_toBottomOf="@id/caffeine_intolerance_check" />

        <CheckBox
            android:id="@+id/sulfite_intolerance_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sulfite_intolerance_text"
            app:layout_constraintTop_toBottomOf="@id/fructose_intolerance_check" />

        <CheckBox
            android:id="@+id/vegan_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/vegan_text"
            app:layout_constraintTop_toBottomOf="@id/sulfite_intolerance_check" />

        <CheckBox
            android:id="@+id/vegetarian_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/vegetarian_text"
            app:layout_constraintTop_toBottomOf="@id/vegan_check" />


    </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>